# recommend-bot

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  启动桌面运营台.cmd
config/: data_sources.yaml  settings.yaml  source_weights.yaml
data/imports/: sample_external_signals.jsonl  sample_products.csv
docs/: architecture.md  data_schema.md  desktop_app.md  external_signal_contract.md  management_api.md  ops_runbook.md
integrations/astrbot_plugin_product_reco/: README.md  main.py  metadata.yaml  requirements.txt
outputs/: 01-产品需求文档-微信私域精品推荐机器人MVP.md  02-开发节点文档-微信私域精品推荐机器人MVP.md  03-测试验收文档-微信私域精品推荐机器人MVP.md  04-MVP执行清单-微信私域精品推荐机器人.md  05-开源项目参考与工程规范.md  06-数据源复用方案-社媒与电商.md  07-MVP阶段进展与AstrBot接入说明.md  08-自动推送与人工审核阶段交付.md  09-外部数据源桥接阶段交付.md  10-文案反馈与重复控制阶段交付.md  11-管理接口与数据源配置阶段交付.md  12-中文运营管理界面阶段交付.md  13-跨电脑项目交接记录.md  14-多多进宝与运营闭环阶段交付.md  README-交付说明.md
src/product_reco_bot/: cli.py  config.py  models.py
src/product_reco_bot/adapters/: approval_store.py  astrbot_stub.py  feedback_store.py  source_sync_store.py  (+2 more)
tests/: test_approval_store.py  test_card_render.py  test_collector_factory.py  test_copywriting.py  test_csv_collector.py  test_desktop_service.py  test_enriched_collector.py  test_feedback_store.py  test_jsonl_signal_collector.py  test_management_api.py  test_pdd.py  test_pdd_collector.py  test_pipeline.py  test_recommendation_history_store.py  test_safety.py  test_schedule.py  test_scoring.py  test_source_registry.py  test_source_sync_store.py  test_target_store.py
(+25 files in other folders)
